--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "lodash": "^4.17.4",
