--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wp-campaign-url-builder",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "description": "Generates links for Analytics tools and short link. Enter your Campaign Name, Source, Medium (UTM link) etc. to generate a full link and a short link (trough the Google URL Shortener API) all in once.",
   "main": "index.js",
   "scripts": {
@@ -31,27 +31,30 @@
     "coffee-script": "^1.12.7",
     "gulp": "^3.9.1",
     "gulp-archiver": "^1.0.0",
-    "gulp-autoprefixer": "^4.0.0",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-clean": "^0.3.2",
-    "gulp-coffee": "^2.3.4",
+    "gulp-coffee": "^2.3.5",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-fingerprint": "^0.3.2",
     "gulp-include": "^2.3.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-rev": "^8.1.1",
+    "gulp-rev-delete-original": "^0.2.3",
+    "gulp-sass": "^3.2.1",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^1.0.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
-    "lodash": "^4.17.4",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.5.3",
-    "run-sequence": "^2.1.0",
+    "lodash": "^4.17.10",
+    "node-notifier": "^5.2.1",
+    "node-sass": "^4.9.0",
+    "run-sequence": "^2.2.1",
     "sigmund": "^1.0.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   }
 }
