--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-fingerprint": "^0.3.2",
+    "gulp-if": "^2.0.2",
     "gulp-include": "^2.3.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
