WIP refactor JS and remove vendor JS from project

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,18 +22,16 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "source",
       "source/vendors",
       "source/public",
       "source/languages",
-      "source/includes",
-      "source/assets",
       "source/admin/views/partial",
       "source/admin/views/images",
       "source/assets/scss",
       "source/assets/css",
       "source/assets/js",
-      "source/assets/js/vendor/admin"
+      "source/assets/js/vendor/admin",
+      "source"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
