rebrandly API done

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,7 +31,8 @@
       "source/assets/css",
       "source/assets/js",
       "source/assets/js/vendor/admin",
-      "source"
+      "source",
+      "source/assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
