--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,37 @@
-version: '2'
+version: '3.9'
 
 services:
 
   wordpress:
-    image: wordpress
+    image: wordpress:latest
     depends_on:
       - mysql
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
     volumes:
-      - ./wp-data:/var/www/html
+      - ./public_html:/var/www/html
       - ./includes/docker-scripts:/docker-scripts
       - ./source:/var/www/html/wp-content/plugins/campaign-url-builder
     environment:
-      # WORDPRESS_DB_HOST: # ... (defaults to the IP and port of the linked mysql container)
-      # WORDPRESS_DB_USER: # ... (defaults to "root")
-      WORDPRESS_DB_PASSWORD: root_password # (defaults to the value of the MYSQL_ROOT_PASSWORD environment variable from the linked mysql container)
-      # WORDPRESS_DB_NAME: # ... (defaults to "wordpress")
-      WORDPRESS_TABLE_PREFIX: wp_ # ... (defaults to "", only set this when you need to override the default table prefix in wp-config.php)
+      WORDPRESS_DB_HOST: mysql
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
 
   mysql:
-    image: mariadb
+    platform: linux/x86_64
+    image: mysql:5.7
+    volumes:
+      - ./database:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    links:
-      - mysql:db
-    ports:
-      - 8181:80
-    environment:
-      MYSQL_USERNAME: root
-      MYSQL_ROOT_PASSWORD: root_password
+volumes:
+  database: {}
+  public_html: {}
+  wp-seeds: {}
+  theme: {}
+  plugins: {}
